# plotex

./: .gitignore  AUTHORS  CHANGELOG.md  CHANGELOG_CUSTOM.md  CLAUDE.md  ChangeLog.veusz-upstream  INSTALL.md  MANIFEST.in  README.md  build_exe.bat  build_msvc.bat  pyqt_setuptools.py  requirements.txt  run_veusz.bat  setup.cfg  setup.py
Documents/man-page/: veusz.pod
Documents/manual-source/: make.bat
examples/: bland_altman.vsz  bland_altman.vszc  boxplot.vszc  heatmap.vsz  kaplan_meier.vsz  kaplan_meier.vszc  pareto.vsz  pareto.vszc  piechart.vsz  qqplot.vsz  qqplot.vszc  ridgeline.vsz  ridgeline.vszc  roc_curve.vsz  roc_curve.vszc  violin_plot.vsz
src/qtmml/: qtmmlwidget.cpp
support/: build_installer.bat  plotex.appdata.xml  plotex.desktop  plotex_installer.iss  veusz.appdata.xml  veusz_windows_pyinst.spec
tests/: conftest.py  test_audit_fixes.py
ui/: about.ui  import_excel.ui
veusz/: __init__.py  embed.py  embed_remote.py  veusz_listen.py  veusz_main.py
veusz/dataimport/: __init__.py  base.py  capture.py  defn_excel.py  defn_fits.py  defn_hdf5.py  defn_json.py  defn_ods.py  defn_standard.py  dialog_csv.py  dialog_excel.py  dialog_ods.py  dialog_plugin.py  dialog_standard.py  fits_hdf5_helpers.py  readcsv.py  simpleread.py
veusz/datasets/: base.py  date.py  expression.py  filtered.py  histo.py  nd.py  oned.py  text.py  twod.py
veusz/dialogs/: __init__.py  aboutdialog.py  capturedialog.py  custom.py  dataeditdialog.py  exceptiondialog.py  export.py  filterdialog.py  fitdialog.py  importdialog.py  preferences.py  reloaddata.py
veusz/document/: colors.py  commandinterface.py  commandinterpreter.py  dbusinterface.py  doc.py  evaluate.py  export.py  loader.py  mime.py  operations.py  painthelper.py  (+1 more)
(+75 files in other folders)
