[metadata]
name = plotex
author = M. Ignacio Monge García
author_email = monge.ignacio@gmail.com
description = Plotex scientific plotting package — a fork of Veusz
long_description =
    Plotex is a 2D and 3D scientific plotting package, forked from
    Veusz by Jeremy Sanders. Designed to create publication-ready
    PDF and SVG output. It features a ribbon UI, GUI, command-line,
    and scripting interfaces. Graphs are constructed from parts,
    allowing complex layouts to be designed.
url = https://github.com/IgnacioMonge/plotex
version = file: VERSION
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications :: Qt
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Topic :: Scientific/Engineering :: Visualization
license = GPL-2.0-or-later

[options]
include_package_data = True
python_requires = >=3.8
packages =
    veusz
    veusz.dataimport
    veusz.datasets
    veusz.dialogs
    veusz.document
    veusz.helpers
    veusz.plugins
    veusz.qtwidgets
    veusz.setting
    veusz.utils
    veusz.widgets
    veusz.windows
install_requires =
    numpy
    PyQt6

[options.extras_require]
fits = astropy
emf = pyemf3
fitting = iminuit
hdf5 = h5py

[options.entry_points]
gui_scripts =
    veusz = veusz.veusz_main:run
